Test: 익명 처리 Test 추가